# ProjectTemplate_CppPython

./: README.md  hello_world.py
my_cpp_module/: CMakeLists.txt  __init__.py  main.cpp
